Projeto_Inicial_ESTUDO/force-app/main/default/objects/Item_Pedido__c/Item_Pedido__c.object-meta.xml
<CustomObject>
    <label>Item do Pedido</label>
    <pluralLabel>Itens do Pedido</pluralLabel>
    <nameField>
        <displayFormat>ITE-{00000}</displayFormat>
        <label>Número do Item</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>