Projeto_Inicial_ESTUDO/force-app/main/default/objects/Item_Pedido__c/fields/Pedido__c.field-meta.xml
<CustomField>
    <fullName>Pedido__c</fullName>
    <label>Pedido</label>
    <type>Lookup</type>
    <referenceTo>Pedido__c</referenceTo>
    <relationshipLabel>Itens do Pedido</relationshipLabel>
    <relationshipName>Itens_do_Pedido</relationshipName>
    <deleteConstraint>Restrict</deleteConstraint>
    <required>true</required>
</CustomField>