Projeto_Inicial_ESTUDO/force-app/main/default/objects/Item_Pedido__c/fields/Produto__c.field-meta.xml
<CustomField>
    <fullName>Produto__c</fullName>
    <label>Produto</label>
    <type>Lookup</type>
    <referenceTo>Produto__c</referenceTo>
    <relationshipLabel>Itens no Pedido</relationshipLabel>
    <relationshipName>Itens_no_Pedido</relationshipName>
    <deleteConstraint>Restrict</deleteConstraint>
    <required>true</required>
</CustomField>